add dagger-hit dependencies, initialized di

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="learning">Learning</string>
     <string name="fuck_you">fuck you</string>
     <string name="gdg">gdg</string>
+    <string name="let_s_do_it">Let\'s do it</string>
 
 
 </resources>
